feat: thymeleaf 의존성 추가 (#12)

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	/* thymeleaf */
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-
+	implementation 'org.springframework:spring-context-support'
 }
 
 tasks.named('test') {
