--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,16 @@ services:
     build: ..
     env_file:
       - .env
+    environment:
+      - SPRING_MAIL_HOST=${SPRING_MAIL_HOST}
+      - SPRING_MAIL_PORT=${SPRING_MAIL_PORT}
+      - SPRING_MAIL_USERNAME=${SPRING_MAIL_USERNAME}
+      - SPRING_MAIL_PASSWORD=${SPRING_MAIL_PASSWORD}
+      - SPRING_MAIL_SMTP_SSL_TRUST=${SPRING_MAIL_SMTP_SSL_TRUST}
+      - SPRING_MAIL_SMTP_SSL_PROTOCOLS=${SPRING_MAIL_SMTP_SSL_PROTOCOLS}
+      - SPRING_MAIL_SMTP_CONNECTIONTIMEOUT=${SPRING_MAIL_SMTP_CONNECTIONTIMEOUT}
+      - SPRING_MAIL_SMTP_TIMEOUT=${SPRING_MAIL_SMTP_TIMEOUT}
+      - SPRING_MAIL_SMTP_WRITETIMEOUT=${SPRING_MAIL_SMTP_WRITETIMEOUT}
     ports:
       - ${SERVER_PORT}:8080
     depends_on:
