feat: DB 시간대 KST로 변경 (#25)

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
+      TZ: Asia/Seoul
     volumes:
       - ${DB_VOLUMES}
     ports:
